--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<div id="app">hgrfhjf<h1>dfsdfdsf</h1></div>
+	<div id="app"></div>
 
 	<canvas id="game_screen" width="800px" height="600px"></canvas>
 
